# Mongolian_LLM

./: .env.example  .gitignore  Readme.md  model.txt  nccl_test.py  pyproject.toml  requirements.txt  run_dpo.sh  run_pipeline.sh  tavily_test.py  train_step1.py  trainer.sh
configs/: data_locations.yaml  data_split_partition.yaml  saved_model_location.yaml
data_generation/: build_search_dataset.py  generate_questions.py  push_instruction_dataset.py  seed_questions.jsonl
dataset/: dpo-dataset.py
dataset_prep/: 1_download_source.py  2_translate_nllb.py  3_filter_and_save.py  4_push_to_hub.py  README.md  utils.py
report/: report.aux  report.out  report.tex  update_tex.py
report_assets/: 01_overview.md  02_datasets.md  03_hyperparameters.md  04_metrics.md  05_sample_outputs.md  06_code_snippets.md  07_environment.md  08_summary_table.md  09_GAPS.md  INFERENCE_NEEDED.md  README.md  _extract.py  _figures.py
scripts/: 0.preprocess.py  3_train_dpo.py  run_data_pipeline.sh  run_eval.sh  run_smoke.sh  run_train_distributed.sh  run_train_single.sh  setup_env.sh
src/: 1_pretrain_text.py  2_finetune_qa.py  3_train_dpo.py  4_instruction_fine_tuning.py  5_vl_fine_tuning.py  run_search_demo.py  run_search_demo_gradio.py
test/: test_gradio.py  test_qa_model.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  (+12 more)
(+52 files in other folders)
