[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mongolian-llm"
version = "0.1.0"
description = "Continued pretraining pipeline for Qwen2B on Mongolian corpora."
readme = "Readme.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.34.2",
  "datasets>=2.21.0",
  "deepspeed>=0.15.1",
  "evaluate>=0.4.3",
  "numpy>=1.26.4",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.1",
  "torch>=2.4.1",
  "tqdm>=4.66.5",
  "transformers>=4.44.2",
  "wandb>=0.17.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
